simon/k8s/nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simon-deployment
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: devops2022.azurecr.io/simonnginx:ba5ae30fa386b75891abe989e18da75a934c7ac6
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: simon-service
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simon-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
      location /simon/ {
        root   /usr/share/nginx/html;
        index  index.html index.htm;
        try_files $uri $uri/ /index.html;
      }
    #cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  #tls:
  #- hosts:
  #  - devops2022.de
  #  secretName: secret
  rules:
    - host: devops2022.de
      http:
        paths:
          - path: /simon(.*)
            pathType: Prefix
            backend:
              service:
                name: simon-service
                port:
                  number: 80
